<resources>
    <string name="app_name">MessengerApp</string>
    <string name="enter_nickname">Enter your nickname</string>
    <string name="enter_password">Enter your password</string>
    <string name="job">What I do</string>
    <string name="sign_up">sign up</string>
    <string name="not_registered">Not registered?</string>
    <string name="sign_in">sign in</string>
    <string name="sign_out">sign out</string>
    <string name="update">Update</string>
    <string name="message">Message</string>
    <string name="empty_nick">Enter nickname</string>
    <string name="empty_pass">Enter password</string>
    <string name="empty_job">Enter what you do</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="search">Search</string>
    <string name="mail_suffix">\@gmail.com</string>
    <string name="no_data">No data found</string>
    <string name="chat_user">chatUser</string>
    <string name="chat_user_job">chatUserJob</string>
    <string name="chat_user_photo">chatUserPhoto</string>
    <string name="new_conv">Start new conversation</string>
    <string name="chatUserUid">uid</string>
    <string name="email_addr">email address</string>
    <string name="username">username</string>
</resources>