<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpPage"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:clickable="true">

            <ImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_marginTop="@dimen/avatar_margin"
                android:src="@drawable/avatar_image_placeholder"
                android:contentDescription="@string/profile_photo" />

            <EditText
                android:id="@+id/nickname_su"
                android:hint="@string/enter_nickname"
                style="@style/textfield_style"
                android:layout_marginTop="@dimen/nick_margin"
                android:inputType="text"/>

            <EditText
                android:id="@+id/pass_su"
                android:hint="@string/enter_password"
                style="@style/textfield_style"
                android:inputType="text"
                android:layout_marginTop="@dimen/pass_margin"/>

            <EditText
                android:id="@+id/job_su"
                android:hint="@string/job"
                style="@style/textfield_style"
                android:inputType="text"
                android:layout_marginTop="@dimen/job_margin"/>

            <Button
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/sign_up"
                android:textSize="@dimen/button_text_size"
                android:backgroundTint="@color/button_color"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>